--- a/BlazorMovie/Maui/BlazorMovie.Maui.csproj
+++ b/BlazorMovie/Maui/BlazorMovie.Maui.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
@@ -56,8 +56,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\MovieClient\MovieClient.csproj" />
-	  <ProjectReference Include="..\Shared\BlazorMovie.Shared.csproj" />
+		<ProjectReference Include="..\MovieClient\MovieClient.csproj" />
+		<ProjectReference Include="..\Shared\BlazorMovie.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
