--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,17 +6,19 @@ updates:
       interval: "daily"
     labels:
       - "nuget"
-      
+    open-pull-requests-limit: 99
+
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
     labels:
       - "github-actions"
-      
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "daily"
-    labels:
-      - "npm"
+    open-pull-requests-limit: 99
+
+  # - package-ecosystem: "npm"
+  #   directory: "/"
+  #   schedule:
+  #     interval: "daily"
+  #   labels:
+  #     - "npm"
