--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Install tools
         run: |
-          dotnet workload install maui wasm-tools
-          # dotnet workload restore
+          dotnet workload restore
+          # dotnet workload install maui wasm-tools
 
       - name: Dotnet Restore
         run: dotnet restore
