--- a/BlazorMovie/Maui/BlazorMovie.Maui.csproj
+++ b/BlazorMovie/Maui/BlazorMovie.Maui.csproj
@@ -53,7 +53,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0-rc.1.22426.10" />
 	</ItemGroup>
 
 	<ItemGroup>
