--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -23,7 +23,8 @@ jobs:
 
       - name: Install tools
         run: |
-          dotnet workload install wasm-tools
+          dotnet workload restore
+          # dotnet workload install wasm-tools
 
       - name: Publish
         working-directory: "./BlazorMovie/Server/"
