--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          include-prerelease: true
+          dotnet-quality: 'preview'
 
       - uses: actions/setup-java@v3.5.0
         with:
