--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,9 @@ jobs:
           distribution: 'adopt'
           java-version: '11'
           check-latest: true
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
       - name: Install tools
         run: |
