--- a/BlazorMovie.Repositories/BlazorMovie.Repositories.csproj
+++ b/BlazorMovie.Repositories/BlazorMovie.Repositories.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorMovie.Entities\BlazorMovie.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
