--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Install tools
         run: |
-          dotnet workload restore
-          # dotnet workload install maui wasm-tools
+          # dotnet workload restore
+          dotnet workload install android ios maccatalyst tvos macos maui wasm-tools
 
       - name: Dotnet Restore
         run: dotnet restore
