--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Install tools
         run: |
           # dotnet workload restore
-          dotnet workload install wasm-tools wasm-experimental
+          dotnet workload install android ios maccatalyst tvos macos maui wasm-tools wasm-experimental
+          # dotnet workload install wasm-tools wasm-experimental
 
       - name: Publish
         working-directory: "./BlazorMovie/Server/"
