--- a/BlazorMovie/Shared/BlazorMovie.Shared.csproj
+++ b/BlazorMovie/Shared/BlazorMovie.Shared.csproj
@@ -1,39 +1,34 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<SignAssembly>true</SignAssembly>
-		<EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
-		<UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
-		<AnalysisLevel>preview</AnalysisLevel>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<PackageReference Include="AspNetCore.Firebase.Authentication" Version="2.0.1" />
-		<PackageReference Include="Braintree" Version="5.16.0" />
-		<PackageReference Include="FirebaseAdmin" Version="2.3.0" />
-		<PackageReference Include="FirebaseAuthentication.net" Version="4.0.2" />
-		<PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
-		<PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
-		<PackageReference Include="Google.Apis.Drive.v3" Version="1.60.0.2986" />
-		<PackageReference Include="Google.Cloud.Firestore" Version="3.1.0" />
-		<PackageReference Include="Google.Cloud.Storage.V1" Version="4.4.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.4" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.4" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.4" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.4" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
-		<PackageReference Include="MudBlazor" Version="6.1.8" />
-		<PackageReference Include="PayoutsSdk" Version="1.1.1" />
-		<PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
-		<PackageReference Include="PayPalHttp" Version="1.0.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.4" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.4" PrivateAssets="all" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<SupportedPlatform Include="browser" />
-	</ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <SignAssembly>true</SignAssembly>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+    <UserSecretsId>2f0b7cb7-4db2-420e-b6d4-dfd9b437d531</UserSecretsId>
+    <AnalysisLevel>preview</AnalysisLevel>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="AspNetCore.Firebase.Authentication" Version="2.0.1" />
+    <PackageReference Include="Braintree" Version="5.25.0" />
+    <PackageReference Include="FirebaseAdmin" Version="3.0.0" />
+    <PackageReference Include="FirebaseAuthentication.net" Version="4.1.0" />
+    <PackageReference Include="FirebaseDatabase.net" Version="4.2.0" />
+    <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.68.0.3416" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="3.7.0" />
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="4.10.0" />
+    <PackageReference Include="MudBlazor" Version="6.19.1" />
+    <PackageReference Include="PayoutsSdk" Version="1.1.1" />
+    <PackageReference Include="PayPalCheckoutSdk" Version="1.0.4" />
+    <PackageReference Include="PayPalHttp" Version="1.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="8.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <SupportedPlatform Include="browser" />
+  </ItemGroup>
 </Project>
